# Fake-News-Detection

./: app.py  app_gemini.py  app_new.py  direct_classifier.py  fake_news_model.pkl  gemini_classifier.py  model.py  preprocessing.py  pyproject.toml  test_gemini.py  test_json_format.py  train.csv  utils.py  visualization.py
